Fix social links overflowing on Contact page

--- a/src/styles/Socials.module.css
+++ b/src/styles/Socials.module.css
@@ -2,17 +2,12 @@
     width: 100%;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: flex-start;
     align-items: center;
     row-gap: 1rem;
     column-gap: 0.5rem;
     margin-top: 2rem;
-}
-
-.location {
-    display: flex;
-    flex-direction: row;
-    align-self: flex-start;
 }
 
 .social {
